--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
         <div class="card">
           <h3>Consistent Academic Performance</h3>
           <p>
-            Maintained strong academic record with SGPA above 8.75 across all semesters, 
+            Maintained strong academic record with SGPA above 9+ across all semesters, 
             demonstrating dedication and consistent effort in coursework.
           </p>
         </div>
