--- a/index.html
+++ b/index.html
@@ -277,10 +277,9 @@
           </p>
         </div>
         <div class="card">
-          <h3>Club Leadership</h3>
+          <h3>Engineering Club Involvement</h3>
           <p>
-            Taking initiative in building and managing CURAJ Engineering Club from ground up, 
-            creating opportunities for students to learn and collaborate.
+            Active core team member of CURAJ Engineering Club, contributing to technical workshops, coding contests, hackathons, and mentorship programs. Collaborated with peers to build a strong technical community and promote hands-on learning among students.
           </p>
         </div>
       </div>
